# rofi-auto-desk

./: README.md  setup.cfg
rofi_auto_desk/: __init__.py
